# aoc-rust-2022

./: Cargo.toml  README.md  justfile
src/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day17.rs  day18.rs
