[package]
name = "aoc-template"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.65"

[dependencies]
grid = "0.9.0"
itertools = "0.10.5"

[dev-dependencies]
rstest = { version = "0.16.0", default-features = false }

[profile.dev]
opt-level = 1
